--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "ticket-generator",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "private": true
+  "private": true,
+  "author": "Eugene Surkov",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0",
+    "qrcode": "^1.5.4",
+    "sharp": "^0.34.2"
+  }
 }
