--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "canvas": "^3.1.0",
     "express": "^5.1.0",
-    "qrcode": "^1.5.4",
-    "sharp": "^0.34.2"
+    "qrcode": "^1.5.4"
   }
 }
